--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.15)
 
 cmake_policy(VERSION 3.15)
 message(STATUS "Using CMake ${CMAKE_VERSION}")
+if (CMAKE_MESSAGE_LOG_LEVEL)
+    message(STATUS "Message log level is set to ${CMAKE_MESSAGE_LOG_LEVEL}")
+endif ()
 
 project("melonDS DS"
     VERSION 0.0.0
