--- a/melondsds_libretro.info.in
+++ b/melondsds_libretro.info.in
@@ -10,7 +10,7 @@ systemid = "nds"
 database = "Nintendo - Nintendo DS|Nintendo - Nintendo DS (Download Play)|Nintendo - Nintendo DSi|Nintendo - Nintendo DSi Decrypted|Nintendo - Nintendo DSi (Digital)"
 license = "GPLv3"
 permissions = ""
-display_version = "Git"
+display_version = "@CMAKE_PROJECT_VERSION@"
 supports_no_game = "true"
 hw_render = "true"
 required_hw_api = "OpenGL Core >= 3.1"
