--- a/melondsds_libretro.info.in
+++ b/melondsds_libretro.info.in
@@ -1,7 +1,7 @@
 display_name = "Nintendo - DS (melonDS DS)"
 authors = "Jesse Talavera-Greenberg, Arisotura"
 supported_extensions = "nds|ids|dsi"
-corename = "melonDS DS"
+corename = "@CMAKE_PROJECT_NAME@"
 manufacturer = "Nintendo"
 categories = "Emulator"
 systemname = "Nintendo DS"
@@ -42,4 +42,4 @@ firmware7_path = "dsi_sd_card.bin"
 firmware7_opt = "true"
 notes = "(!) bios7.bin (md5): df692a80a5b1bc90728bc3dfc76cd948|(!) bios9.bin (md5): a392174eb3e572fed6447e956bde4b25"
 
-description = "A port of the melonDS emulator to libretro. This core supports a variety of modern features, like hardware-accelerated internal res increases, as well as increased accuracy for some popular games. While not as mature as Desmume--and therefore not as compatible with the DS library as a whole--this core is a good first choice to try, with the Desmume core(s) as a fallback."
+description = "@CMAKE_PROJECT_DESCRIPTION@"
