--- a/melondsds_libretro.info.in
+++ b/melondsds_libretro.info.in
@@ -1,18 +1,32 @@
-display_name = "Nintendo - DS (melonDS DS)"
-authors = "Jesse Talavera-Greenberg, Arisotura"
+# Software Information
+display_name = "Nintendo - DS (@CMAKE_PROJECT_NAME@)"
+authors = "Jesse Talavera-Greenberg|Arisotura"
 supported_extensions = "nds|ids|dsi"
 corename = "@CMAKE_PROJECT_NAME@"
-manufacturer = "Nintendo"
 categories = "Emulator"
-systemname = "Nintendo DS"
-systemid = "nds"
-database = "Nintendo - Nintendo DS|Nintendo - Nintendo DS (Download Play)|Nintendo - Nintendo DSi|Nintendo - Nintendo DSi Decrypted|Nintendo - Nintendo DSi (Digital)"
 license = "GPLv3"
 permissions = ""
 display_version = "@CMAKE_PROJECT_VERSION@"
-supports_no_game = "true"
+
+# Hardware Information
+manufacturer = "Nintendo"
+systemname = "Nintendo DS"
+systemid = "nds"
+
+# Libretro Features
+core_options = "true"
+core_options_version = "2.0"
+database = "Nintendo - Nintendo DS|Nintendo - Nintendo DS (Download Play)|Nintendo - Nintendo DSi|Nintendo - Nintendo DSi Decrypted|Nintendo - Nintendo DSi (Digital)"
 hw_render = "true"
+input_descriptors = "true"
+libretro_saves = "true"
+load_subsystem = "true"
+needs_fullpath = "false"
 required_hw_api = "OpenGL Core >= 3.1"
+savestate = "true"
+savestate_features = "serialized"
+single_purpose = "false"
+supports_no_game = "true"
 
 # Firmware / BIOS
 firmware_count = 8
