--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -105,4 +105,7 @@ if (WIN32 AND MINGW)
     target_link_options(libretro PUBLIC -static-libgcc -static-libstdc++ -static)
 endif()
 
+target_compile_definitions(libretro PUBLIC MELONDSDS_VERSION="${CMAKE_PROJECT_VERSION}")
+target_compile_definitions(libretro PUBLIC MELONDSDS_NAME="${CMAKE_PROJECT_NAME}")
+
 target_link_libraries(libretro PUBLIC libretro-common core)
