--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -36,6 +36,7 @@ add_library(libretro MODULE
     render.hpp
     screenlayout.cpp
     screenlayout.hpp
+    utils.hpp
     )
 
 target_include_directories(libretro SYSTEM PUBLIC
