--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -37,7 +37,8 @@ add_library(libretro MODULE
     render.hpp
     screenlayout.cpp
     screenlayout.hpp
-    )
+    utils.cpp
+    utils.hpp)
 
 target_include_directories(libretro SYSTEM PUBLIC
     "${libretro-common_SOURCE_DIR}/include"
