--- a/.github/workflows/build-linux.yaml
+++ b/.github/workflows/build-linux.yaml
@@ -40,6 +40,10 @@ jobs:
       - name: Configure
         working-directory: "${{ env.BUILD_DIR }}"
         run: cmake "$GITHUB_WORKSPACE" -DMELONDS_REPOSITORY_URL:STRING="${{ matrix.repo }}" -DMELONDS_REPOSITORY_TAG:STRING="${{ matrix.commit }}"
+      - name: Install GCC problem matcher
+        uses: root-project/gcc-problem-matcher-improved@9d83f12b27a78210f0485fb188e08d94fa807a6d
+        with:
+          build-directory: ${{ github.workspace }}
       - name: Build
         working-directory: "${{ env.BUILD_DIR }}"
         run: make -j$(nproc --all)
@@ -95,6 +99,8 @@ jobs:
         run: cmake "$GITHUB_WORKSPACE" -DMELONDS_REPOSITORY_URL:STRING="${{ matrix.repo }}" -DMELONDS_REPOSITORY_TAG:STRING="${{ matrix.commit }}"
       - name: Install GCC problem matcher
         uses: root-project/gcc-problem-matcher-improved@9d83f12b27a78210f0485fb188e08d94fa807a6d
+        with:
+          build-directory: ${{ env.BUILD_DIR }}
       - name: Build
         working-directory: "${{ env.BUILD_DIR }}"
         run: make -j$(nproc --all)
