--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -48,7 +48,7 @@ jobs:
       - name: Install GCC problem matcher
         uses: root-project/gcc-problem-matcher-improved@9d83f12b27a78210f0485fb188e08d94fa807a6d
         with:
-          build-directory: ${{ env.BUILD_DIR }}
+          build-directory: build # ${{ env.BUILD_DIR }} has backslashes, which make the problem matcher choke
       - name: Build
         working-directory: "${{ env.BUILD_DIR }}"
         run: mingw32-make -j$(nproc --all)
