Change how the core builds against OpenGL
- opengl.cpp is now included when OpenGL ES is in use
- The right OpenGL ES include directories are searched

--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -45,12 +45,31 @@ target_include_directories(libretro SYSTEM PUBLIC
 
 add_common_definitions(libretro)
 
+if (HAVE_OPENGL OR HAVE_OPENGLES)
+    target_sources(libretro PRIVATE opengl.cpp)
+endif()
+
 if (HAVE_OPENGL)
     if (APPLE)
         set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-framework,OpenGL")
     endif ()
-    target_sources(libretro PRIVATE opengl.cpp)
     target_link_libraries(libretro PUBLIC OpenGL::GL)
+    target_include_directories(libretro SYSTEM PUBLIC "${OPENGL_INCLUDE_DIR}")
+elseif (HAVE_OPENGLES1)
+    target_link_libraries(libretro PUBLIC OpenGLES::OpenGLESv1)
+    target_include_directories(libretro SYSTEM PUBLIC "${OpenGLES_V1_INCLUDE_DIR}")
+elseif (HAVE_OPENGLES2)
+    target_link_libraries(libretro PUBLIC OpenGLES::OpenGLESv2)
+    target_include_directories(libretro SYSTEM PUBLIC "${OpenGLES_V2_INCLUDE_DIR}")
+elseif (HAVE_OPENGLES3)
+    target_link_libraries(libretro PUBLIC OpenGLES::OpenGLESv3)
+    target_include_directories(libretro SYSTEM PUBLIC "${OpenGLES_V3_INCLUDE_DIR}")
+elseif (HAVE_OPENGLES31)
+    target_link_libraries(libretro PUBLIC OpenGLES::OpenGLESv31)
+    target_include_directories(libretro SYSTEM PUBLIC "${OpenGLES_V31_INCLUDE_DIR}")
+elseif (HAVE_OPENGLES32)
+    target_link_libraries(libretro PUBLIC OpenGLES::OpenGLESv32)
+    target_include_directories(libretro SYSTEM PUBLIC "${OpenGLES_V32_INCLUDE_DIR}")
 endif ()
 
 if (ENABLE_JIT)
