--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,39 +89,7 @@ FetchContent_MakeAvailable(melonDS libretro-common)
 include(cmake/ConfigureFeatures.cmake)
 include(cmake/libretro-common.cmake)
 include(cmake/utils.cmake)
-
-if (OpenGL_OpenGL_FOUND)
-    # Upstream melonDS uses GLAD to load OpenGL, but we want to use libretro's loader.
-    # So instead of patching melonDS, let's change how it's compiled.
-
-    file(GLOB melonDS_cpp_sources "${melonDS_SOURCE_DIR}/src/*.cpp")
-    # Get all C++ source files within melonDS' main directory.
-    # Need to specify C++ files because melonDS uses assembly,
-    # which chokes if the glsym headers are included.
-
-    # Now ensure that melonDS can find libretro's headers...
-    target_include_directories(core SYSTEM PRIVATE "${libretro-common_SOURCE_DIR}/include")
-
-    # ...and that the #defines that libretro needs here are provided.
-    # Also, that the header that includes GLAD is *excluded* (PLATFORMOGL_H).
-    target_compile_definitions(core PUBLIC PLATFORMOGL_H HAVE_OPENGL OGLRENDERER_ENABLED ENABLE_OGLRENDERER)
-
-    if (APPLE)
-        # macOS uses a different OpenGL header path.
-        set(MELONDSDS_OPENGL_INCLUDES "-include;OpenGL/gl.h;-include;OpenGL/glext.h")
-    else()
-        set(MELONDSDS_OPENGL_INCLUDES "-include;GL/gl.h;-include;GL/glext.h")
-    endif()
-
-    # Now let's include the relevant headers before each melonDS C++ source file.
-    set_source_files_properties(
-        ${melonDS_cpp_sources}
-        TARGET_DIRECTORY
-        core
-        PROPERTIES
-        COMPILE_OPTIONS "${MELONDSDS_OPENGL_INCLUDES};-include;glsm/glsm.h;-include;glsm/glsmsym.h;-include;glsym/glsym_gl.h")
-    # TODO: Adapt for GLES2 and GLES3
-endif ()
+include(cmake/ConfigureMelonDS.cmake)
 
 add_subdirectory(src/libretro)
 
