Enable HAVE_GLSYM_PRIVATE and OpenGL ES in libretro-common

--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(libretro MODULE
     environment.hpp
     exceptions.cpp
     exceptions.hpp
+    glsym_private.h
     info.cpp
     info.hpp
     input.cpp
