--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -37,7 +37,7 @@ add_library(libretro MODULE
     screenlayout.cpp
     screenlayout.hpp
     utils.cpp
-    utils.hpp)
+    utils.hpp glsym_private.cpp)
 
 target_include_directories(libretro SYSTEM PUBLIC
     "${libretro-common_SOURCE_DIR}/include"
