--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,7 +10,7 @@ on:
 jobs:
   windows:
     name: Windows (x86_64)
-    uses: ./.github/workflows/shared/build.yaml
+    uses: ./.github/workflows/build.yaml
     with:
       archive-name: melondsds_libretro-win32-x86_64
       runs-on: windows-latest
@@ -22,7 +22,7 @@ jobs:
 
   macos:
     name: macOS (Universal)
-    uses: ./.github/workflows/shared/build.yaml
+    uses: ./.github/workflows/build.yaml
     with:
       archive-name: melondsds_libretro-macos-universal
       runs-on: macos-latest
@@ -32,7 +32,7 @@ jobs:
 
   linux-x86_64:
     name: Linux (x86_64)
-    uses: ./.github/workflows/shared/build.yaml
+    uses: ./.github/workflows/build.yaml
     with:
       archive-name: melondsds_libretro-linux-x86_64
       runs-on: ubuntu-latest
@@ -46,7 +46,7 @@ jobs:
 
   linux-aarch64:
     name: Linux (aarch64)
-    uses: ./.github/workflows/shared/build.yaml
+    uses: ./.github/workflows/build.yaml
     with:
       archive-name: melondsds_libretro-linux-aarch64
       runs-on: ubuntu-latest
@@ -62,7 +62,7 @@ jobs:
 
   android:
     name: Android
-    uses: ./.github/workflows/shared/build.yaml
+    uses: ./.github/workflows/build.yaml
     with:
       lib-ext: .so
       archive-name: melondsds_libretro-android
@@ -72,7 +72,7 @@ jobs:
 
   ios:
     name: iOS
-    uses: ./.github/workflows/shared/build.yaml
+    uses: ./.github/workflows/build.yaml
     with:
       runs-on: macos-latest
       archive-name: melondsds_libretro-ios
