--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -69,6 +69,12 @@ jobs:
       lib-name: melondsds_libretro_android
       cmake-args: -DENABLE_OGLRENDERER=OFF -DANDROID_ABI=arm64-v8a -DANDROID_PLATFORM=22
       runs-on: ubuntu-latest
+      deps: |
+        sudo rm -f /etc/apt/sources.list.d/dotnetdev.list /etc/apt/sources.list.d/microsoft-prod.list /etc/apt/sources.list.d/kubernetes.list
+        # Don't check for dependencies that we won't use
+        
+        sudo apt-get update
+        sudo apt-get install -y cmake ninja-build
 
   ios:
     name: iOS
