--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -63,7 +63,7 @@ jobs:
   build:
     strategy:
       matrix:
-        config:
+        build-type:
           - Debug
           - Release
     runs-on: ${{ inputs.runs-on }}
@@ -92,7 +92,7 @@ jobs:
 
       - name: Configure
         working-directory: "${{ env.BUILD_DIR }}"
-        run: cmake "${{ github.workspace }}" -G"${{ inputs.generator }}" ${{ inputs.cmake-args }}
+        run: cmake "${{ github.workspace }}" -G"${{ inputs.generator }}" -DCMAKE_BUILD_TYPE="${{ matrix.build-type }}" ${{ inputs.cmake-args }}
 
       - name: Build
         working-directory: "${{ env.BUILD_DIR }}"
@@ -109,8 +109,7 @@ jobs:
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
-        if: matrix.release
         with:
-          name: "${{ inputs.archive-name }}-${{ matrix.config }}"
+          name: "${{ inputs.archive-name }}-${{ matrix.build-type }}"
           if-no-files-found: error
           path: "${{ env.DIST_DIR }}"
