Install and use CCache

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -84,6 +84,11 @@ jobs:
       - name: Install Dependencies
         run: ${{ inputs.deps }}
 
+      - name: Set Up CCache
+        uses: hendrikmuhs/ccache-action@v1.2
+        with:
+          key: ${{ inputs.archive-name }}-${{ matrix.build-type }}  # Eg. "some_build-ubuntu-latest"
+
       - name: Install GCC Problem Matcher
         uses: root-project/gcc-problem-matcher-improved@9d83f12b27a78210f0485fb188e08d94fa807a6d
         with:
