--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -99,7 +99,7 @@ jobs:
 
       - name: Configure
         working-directory: "${{ env.BUILD_DIR }}"
-        run: cmake "${{ github.workspace }}" -G"${{ inputs.generator }}" -DCMAKE_BUILD_TYPE="${{ matrix.build-type }}" ${{ inputs.cmake-args }}
+        run: cmake "${{ github.workspace }}" -DCMAKE_BUILD_TYPE="${{ matrix.build-type }}" ${{ inputs.cmake-args }}
 
       - name: Build
         working-directory: "${{ env.BUILD_DIR }}"
