Use dependent jobs

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,6 +24,7 @@ on:
         description: The script that installs dependencies.
         type: string
         required: false
+        default: echo No deps
       runs-on:
         description: The platform on which the workflow will be run. Passed directly to jobs.<job_id>.runs-on.
         type: string
@@ -73,16 +74,6 @@ jobs:
     steps:
       - name: Check Out Source
         uses: actions/checkout@v3
-
-      - name: Install MSYS2
-        uses: msys2/setup-msys2@v2
-        if: contains(inputs.shell, 'msys2')
-        with:
-          msystem: MINGW64
-          update: true
-
-      - name: Install Dependencies
-        run: ${{ inputs.deps }}
 
       - name: Set Up CCache
         uses: hendrikmuhs/ccache-action@v1.2
