--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -78,7 +78,7 @@ jobs:
       - name: Install Dependencies
         uses: ./.github/actions/deps
         with:
-          ccache-cache-name: ${{ inputs.archive-name }}-{{ matrix.build-type }}
+          ccache-cache-name: ${{ inputs.archive-name }}-${{ matrix.build-type }}
           runs-on: ${{ inputs.runs-on }}
 
       - name: Create build environment
