--- a/.github/actions/deps/action.yml
+++ b/.github/actions/deps/action.yml
@@ -15,6 +15,7 @@ runs:
   steps:
     - name: Install GCC Problem Matcher
       uses: root-project/gcc-problem-matcher-improved@9d83f12b27a78210f0485fb188e08d94fa807a6d
+      if: ${{ !contains(inputs.runs-on, 'windows') }} # See https://github.com/root-project/gcc-problem-matcher-improved/issues/3
       with:
         build-directory: ${{ inputs.build-dir }}
 
