--- a/.github/actions/deps/action.yml
+++ b/.github/actions/deps/action.yml
@@ -59,5 +59,6 @@ runs:
 
     - name: Set Up CCache
       uses: hendrikmuhs/ccache-action@v1.2
+      shell: bash
       with:
         key: ${{ inputs.ccache-cache-name }}
