--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,7 @@ name: Build (Internal)
 on:
   workflow_call:
     inputs:
-      ccache-basedir:
+      ccache-dir:
         description: The directory in which to place the ccache cache.
         type: string
         required: false
@@ -64,7 +64,7 @@ on:
 env:
   BUILD_DIR: "${{ github.workspace }}/${{ inputs.build-dir }}"
   DIST_DIR: "${{ github.workspace }}/${{ inputs.dist-dir }}"
-  CCACHE_BASEDIR: "${{ inputs.ccache-basedir }}"
+  CCACHE_DIR: "${{ inputs.ccache-dir }}"
 jobs:
   build:
     strategy:
@@ -85,7 +85,7 @@ jobs:
         with:
           build-dir: ${{ env.BUILD_DIR }}
           ccache-cache-name: ${{ inputs.archive-name }}-${{ matrix.build-type }}
-          ccache-basedir: ${{ env.CCACHE_BASEDIR }}
+          ccache-dir: ${{ env.CCACHE_DIR }}
           runs-on: ${{ inputs.runs-on }}
 
       - name: Create build environment
