--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,7 +17,7 @@ jobs:
       info-dir: info
       lib-ext: dll
       shell: msys2 {0}
-      ccache-basedir: "$LOCALAPPDATA/ccache"
+      ccache-dir: "$LOCALAPPDATA/ccache"
 
   macos:
     name: macOS (Universal)
