Try a different set of packages

--- a/.github/actions/deps/action.yml
+++ b/.github/actions/deps/action.yml
@@ -28,7 +28,7 @@ runs:
       with:
         msystem: MINGW64
         update: true
-        install: git pkgconf cmake gcc ccache ninja make mingw-w64-x86_64-toolchain
+        install: git pkgconf mingw-w64-x86_64-toolchain mingw-w64-x86_64-cmake mingw-w64-x86_64-ccache
 
     - name: Install Dependencies (macOS)
       if: ${{ contains(inputs.runs-on, 'macos') }}
